# c_nn

./: CMakeLists.txt  Functions.hpp  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
Functions/: Constant.cpp  Constant.hpp  Cos.cpp  Cos.hpp  Function.cpp  Function.hpp  Log.cpp  Max.cpp  Max.hpp  Min.cpp  Min.hpp  Pol.cpp  Pol.hpp  Sin.cpp
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/c_nn/: Functions.hpp
include/c_nn/Functions/: Function.hpp  Log.hpp  Sin.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/Functions/: Constant.cpp  Cos.cpp  Function.cpp  Log.cpp  Max.cpp  Min.cpp  Pol.cpp  Sin.cpp
tests/: CMakeLists.txt  pol_test.cpp
